# ComfyUI-PromptUtils

./: README.md  __init__.py  filename_generator.py  prompt_wildcards.py  pyproject.toml
data/: artist_styles.csv  artists.csv  assorted_media.csv  color2.csv  colors.csv  expressions.csv  filenames.json  games.csv  keywords.csv  lighting.csv  lighting2.csv  locations_mundane.csv  locations_weird.csv  makeup.csv  mediums.csv  movies.csv  nationalities.csv  outfits.csv  outfits_nsfw.csv  painting_styles.csv  poses.csv  power_words.csv  power_words_nsfw.csv  species.csv  styles.csv  styles2.csv  times.csv
