[project]
name = "comfyui-promptutils"
description = "A set of ComfyUI nodes designed to enhance your workflow with realistic filename generation and prompt generation."
version = "2.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/RunningOverGlowies/ComfyUI-PromptUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-PromptUtils"
Icon = ""
